--- a/server/package.json
+++ b/server/package.json
@@ -8,13 +8,18 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
+    "axios": "^0.23.0",
     "bcryptjs": "^2.4.3",
+    "cron": "^1.8.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.11",
+    "node-fetch": "^3.0.0",
+    "nodemailer": "^6.7.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
+    "puppeteer": "^10.4.0",
     "sequelize": "^6.7.0",
     "uuid": "^8.3.2"
   },
