--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
+   
   },
   "dependencies": {
     "axios": "^0.23.0",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "cron": "^1.8.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
