--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,9 @@
     "cron": "^1.8.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-expeditious": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.11",
-    "node-fetch": "^3.0.0",
     "nodemailer": "^6.7.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
