--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-expeditious": "^5.1.1",
+    "googleapis": "^100.0.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.11",
     "nodemailer": "^6.7.0",
