--- a/client/job-scraper-app/package.json
+++ b/client/job-scraper-app/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
     "react-table": "^7.7.0",
+    "react-toastify": "^9.0.8",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
   },
